# RBOT

./: .gitignore  CMakeLists.txt  README.md  README_original.md  copy_src_to_clipboard.py  full_setup_and_build.bat
src/: main.cpp  model.cpp  model.h  object3d.cpp  object3d.h  optimization_engine.cpp  pose_estimator6d.cpp  pose_estimator6d.h  rendering_engine.cpp  rendering_engine.h  template_view.cpp
