CMAKE_MINIMUM_REQUIRED(VERSION 4.0)

SET(PROJECTNAME RBOT)
PROJECT(${PROJECTNAME})

SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(OpenCV_STATIC OFF)


SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	"${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

FILE(GLOB SOURCES src/*.cpp src/*.h src/*.hpp src/*.glsl)

FIND_PACKAGE(OpenGL REQUIRED)
message(STATUS "OpenGL found: ${OPENGL_FOUND}")
message(STATUS "OpenGL include dirs: ${OPENGL_INCLUDE_DIR}")
message(STATUS "OpenGL libraries: ${OPENGL_LIBRARIES}")

FIND_PACKAGE(OpenCV REQUIRED)
message(STATUS "OpenCV includes: ${OpenCV_INCLUDE_DIRS}")

FIND_PACKAGE(Qt5Widgets REQUIRED)
message(STATUS "Qt5Widgets found: ${Qt5Widgets_FOUND}")

FIND_PACKAGE(Qt5OpenGL REQUIRED)
message(STATUS "Qt5OpenGL found: ${Qt5OpenGL_FOUND}")

FIND_PACKAGE(ASSIMP REQUIRED)
message(STATUS "Assimp libs: ${ASSIMP_LIBRARIES}")

SET(LIBRARIES 
	Qt5::Widgets 
	Qt5::OpenGL
	${OpenCV_LIBS}
	${OPENGL_LIBRARIES}
	${ASSIMP_LIBRARIES}
)


INCLUDE_DIRECTORIES(
	${OpenCV_INCLUDE_DIRS} 
	${OPENGL_INCLUDE_DIR}
	${ASSIMP_INCLUDE_DIR}
)


ADD_EXECUTABLE(${PROJECTNAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
